--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.2",
     "axios": "^0.27.2",
+    "babel-plugin-superjson-next": "0.4.3",
     "daisyui": "^2.15.4",
     "dotenv": "^16.0.1",
+    "echarts": "5.3.3",
+    "echarts-for-react": "3.0.2",
     "ethers": "^5.6.9",
     "lightweight-charts": "^3.8.0",
     "moment": "^2.29.3",
@@ -24,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "superjson": "1.9.1",
     "wagmi": "^0.4.12"
   },
   "devDependencies": {
