issue:datepicker format not changing

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@rainbow-me/rainbowkit": "^0.3.3",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.2",
+    "@wojtekmaj/react-daterange-picker": "^3.4.0",
     "axios": "^0.27.2",
     "daisyui": "^2.15.4",
     "dotenv": "^16.0.1",
@@ -26,6 +27,7 @@
     "next": "12.1.6",
     "next-themes": "^0.2.0",
     "react": "18.2.0",
+    "react-date-range": "^1.4.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
