--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "vercel:deploy": "vercel deploy"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.14.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@rainbow-me/rainbowkit": "^0.3.3",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.2",
+    "@wojtekmaj/react-daterange-picker": "^3.4.0",
     "axios": "^0.27.2",
     "babel-plugin-superjson-next": "0.4.3",
-    "daisyui": "^2.15.4",
+    "daisyui": "^2.17.0",
     "dotenv": "^16.0.1",
     "echarts": "5.3.3",
     "echarts-for-react": "3.0.2",
@@ -25,6 +29,8 @@
     "next": "12.1.6",
     "next-themes": "^0.2.0",
     "react": "18.2.0",
+    "react-date-range": "^1.4.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "superjson": "1.9.1",
